--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,6 +39,7 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'Philippines -- History -- Sources'
 - !lcsh 'Philippines -- Discovery and exploration'
+- GITenberg
 title: "The Philippine Islands, 1493-1898 — Volume 22 of 55 \r\n1625-29\r\nExplorations\
   \ by early navigators, descriptions of the islands and their peoples, their history\
   \ and records of the Catholic missions, as related in contemporaneous books and\
